Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nga công phá từ mọi hướng, Ukraine rút chạy hỗn loạn ở Kursk",
+    "content": "Trong bối cảnh chiến sự gia tăng tại tỉnh Kursk, quân đội Nga tuyên bố đã giành lại 12 khu định cư và kiểm soát hơn 100km2 lãnh thổ, khiến lực lượng Ukraine rơi vào tình trạng rút lui hỗn loạn. Các binh sĩ Ukraine mất liên lạc với bộ chỉ huy và bị tấn công từ các vị trí của Nga, dẫn đến tổn thất lớn về nhân sự và thiết bị. Tình hình diễn ra căng thẳng khi Nga tiếp tục chiến dịch tấn công quy mô lớn, đe dọa cắt đứt các tuyến đường tiếp tế của Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/nga-cong-pha-tu-moi-huong-ukraine-rut-chay-hon-loan-o-kursk-20250311175431990.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tình hình chiến sự ở tỉnh Kursk hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Nga đã giành lại 12 khu định cư và kiểm soát hơn 100km2 lãnh thổ.",
+        "correct": true
+      },
+      {
+        "text": "Ukraine đã hoàn toàn kiểm soát tỉnh Kursk.",
+        "correct": false
+      },
+      {
+        "text": "Trung Quốc can thiệp vào cuộc chiến ở Kursk.",
+        "correct": false
+      },
+      {
+        "text": "Mỹ đã ngừng hỗ trợ quân sự cho Ukraine.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Taxi bỏ chạy sau khi tông chết thai phụ",
     "content": "Vào sáng ngày 11/3, một vụ tai nạn nghiêm trọng xảy ra trên đường ĐT 769 khi một chiếc taxi lấn làn và tông vào một cặp vợ chồng trẻ đang đi xe máy. Hậu quả là người vợ mang thai đã không qua khỏi do bị thương nặng. Sau vụ tai nạn, tài xế taxi đã bỏ chạy khoảng ba km trước khi bị cảnh sát chặn lại.",
     "link": "https://vnexpress.net/taxi-bo-chay-sau-khi-tong-chet-thai-phu-4860023.html",
@@ -1176,33 +1203,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích khi ăn dâu tây thường xuyên",
     "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
@@ -1225,6 +1225,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
@@ -2288,33 +2315,6 @@
       },
       {
         "text": "Vì sổ hộ khẩu vẫn còn giá trị sử dụng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chiến sự Ukraine 11/3: Tình hình Kursk lên đỉnh điểm, quân Kiev rút chạy",
-    "content": "Tình hình chiến sự tại tỉnh Kursk đang diễn ra căng thẳng khi quân đội Nga giành lại kiểm soát 6 khu định cư và bắt giữ nhiều binh sĩ Ukraine. Đêm 9/3, lực lượng Moscow tiếp tục tấn công vào Sudzha, một thành phố chiến lược, trong khi nhiều lính Ukraine phải rút lui về tỉnh Sumy. Hệ thống phòng thủ của Ukraine đã sụp đổ, và quân đội Nga vẫn đang tiếp tục các cuộc tấn công mạnh mẽ nhằm vào các vị trí của Kiev, khiến tình hình trở nên bất ổn và khó lường.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-113-tinh-hinh-kursk-len-dinh-diem-quan-kiev-rut-chay-20250311100603247.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tình hình chiến sự tại tỉnh Kursk diễn ra như thế nào vào ngày 11/3?",
-    "answers": [
-      {
-        "text": "Quân đội Nga giành lại kiểm soát nhiều khu vực và quân Ukraine rút chạy.",
-        "correct": true
-      },
-      {
-        "text": "Ukraine đã tiến hành tấn công mạnh mẽ vào Kursk.",
-        "correct": false
-      },
-      {
-        "text": "Nga đã hoàn toàn rút quân khỏi Kursk.",
-        "correct": false
-      },
-      {
-        "text": "Tình hình ở Kursk đã ổn định và yên bình.",
         "correct": false
       }
     ]
@@ -3940,33 +3940,6 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
-    "answers": [
-      {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
-        "correct": true
-      },
-      {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Courtois không muốn chu cấp cho họ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -3989,6 +3962,33 @@
       },
       {
         "text": "Được đi du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
         "correct": false
       }
     ]
@@ -4307,33 +4307,6 @@
     ]
   },
   {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -4360,6 +4333,33 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
