Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Nhân bản chó cưng đã chết",
+    "content": "Cô Xu ở Hàng Châu, Trung Quốc, đã nhân bản chú chó cưng Joker đã chết với chi phí 160.000 tệ. Dù bản sao Little Joker giống hệt về ngoại hình và tính cách, cô nhận ra rằng nó không thể thay thế được Joker. Qua quá trình chăm sóc Little Joker, cô Xu hiểu rằng nhân bản không phải là hồi sinh mà là cơ hội để yêu thương một cá thể mới, giúp cô vượt qua nỗi đau mất mát.",
+    "link": "https://vnexpress.net/nhan-ban-cho-cung-da-chet-4860016.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Nhân bản chó cưng có giúp cô Xu vượt qua nỗi đau mất mát không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không thể thay thế hoàn toàn",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn không có tác dụng",
+        "correct": false
+      },
+      {
+        "text": "Có, nó làm cô Xu vui hơn hẳn",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ trong một thời gian ngắn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nga công phá từ mọi hướng, Ukraine rút chạy hỗn loạn ở Kursk",
     "content": "Trong bối cảnh chiến sự gia tăng tại tỉnh Kursk, quân đội Nga tuyên bố đã giành lại 12 khu định cư và kiểm soát hơn 100km2 lãnh thổ, khiến lực lượng Ukraine rơi vào tình trạng rút lui hỗn loạn. Các binh sĩ Ukraine mất liên lạc với bộ chỉ huy và bị tấn công từ các vị trí của Nga, dẫn đến tổn thất lớn về nhân sự và thiết bị. Tình hình diễn ra căng thẳng khi Nga tiếp tục chiến dịch tấn công quy mô lớn, đe dọa cắt đứt các tuyến đường tiếp tế của Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/nga-cong-pha-tu-moi-huong-ukraine-rut-chay-hon-loan-o-kursk-20250311175431990.htm",
@@ -1109,28 +1136,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -1163,28 +1190,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
