Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -606,6 +606,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -632,33 +659,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -1414,28 +1414,28 @@
     ]
   },
   {
-    "title": "‘Ông lớn’ ngân hàng châu Á ‘ôm’ trái phiếu quốc tế do Vinhomes phát hành",
-    "content": "Vinhomes đang tiến hành phát hành trái phiếu quốc tế tại Singapore nhằm huy động 40 triệu USD cho dự án nhà ở xã hội Happy Home Tràng Cát ở Hải Phòng. Ngân hàng Đầu tư cơ sở hạ tầng châu Á (AIIB) dự kiến sẽ mua trái phiếu này, và Ngân hàng Nhà nước đã có ý kiến không phản đối khoản đầu tư này. Khoản tiền thu được sẽ được sử dụng để xây dựng cơ sở hạ tầng cho dự án và tái cấp vốn cho các khoản nợ USD khác.",
-    "link": "https://tuoitre.vn/ong-lon-ngan-hang-chau-a-om-trai-phieu-quoc-te-do-vinhomes-phat-hanh-20250311135314114.htm",
+    "title": "Ông lớn ngân hàng châu Á đầu tư vào trái phiếu quốc tế do Vinhomes phát hành",
+    "content": "Vinhomes đang thực hiện việc phát hành trái phiếu quốc tế tại Sở Giao dịch chứng khoán Singapore với đối tác dự kiến là Ngân hàng Đầu tư cơ sở hạ tầng châu Á (AIIB). Khoản đầu tư này nhằm huy động vốn cho dự án nhà ở xã hội Happy Home Tràng Cát, góp phần giải quyết tình trạng thiếu hụt nhà ở cho người thu nhập thấp. Số tiền thu được từ phát hành trái phiếu sẽ được sử dụng cho xây dựng cơ sở hạ tầng và tái cấp vốn cho các khoản nợ USD của Vinhomes.",
+    "link": "https://tuoitre.vn/ong-lon-ngan-hang-chau-a-dau-tu-vao-trai-phieu-quoc-te-do-vinhomes-phat-hanh-20250311135314114.htm",
     "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Ai là ngân hàng dự kiến mua trái phiếu quốc tế của Vinhomes?",
+    "importance": 9,
+    "question": "Ai là ngân hàng đầu tư vào trái phiếu do Vinhomes phát hành?",
     "answers": [
       {
         "text": "Ngân hàng Đầu tư cơ sở hạ tầng châu Á (AIIB)",
         "correct": true
       },
       {
-        "text": "Ngân hàng Nhà nước",
+        "text": "Ngân hàng Thế giới (WB)",
         "correct": false
       },
       {
-        "text": "Ngân hàng Thương mại Cổ phần",
+        "text": "Ngân hàng Phát triển châu Á (ADB)",
         "correct": false
       },
       {
-        "text": "Ngân hàng Quốc tế Việt Nam",
+        "text": "Ngân hàng Nhà nước Việt Nam",
         "correct": false
       }
     ]
