--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tiết lộ thu nhập nữ chủ tịch ngoại quốc ở casino lớn nhất Quảng Ninh",
+    "content": "Công ty cổ phần Quốc tế Hoàng Gia (RIC), chủ sở hữu casino Royal Hạ Long, đã công bố báo cáo tài chính năm 2023, tiết lộ rằng bà Chen Yu Chen, chủ tịch HĐQT, nhận thu nhập gần 242 triệu đồng trong 7 tháng làm việc. Mặc dù doanh thu đạt hơn 111,5 tỉ đồng, nhưng công ty ghi nhận lỗ sau thuế lên tới 101,7 tỉ đồng, chủ yếu do chi phí tăng. Tình hình tài chính của RIC đang gặp khó khăn khi tổng lỗ lũy kế đã vượt 576 tỉ đồng.",
+    "link": "https://tuoitre.vn/tiet-lo-thu-nhap-nu-chu-tich-ngoai-quoc-o-casino-lon-nhat-quang-ninh-20250311194116748.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bà Chen Yu Chen ở casino Royal Hạ Long nhận thu nhập bao nhiêu trong năm 2023?",
+    "answers": [
+      {
+        "text": "Gần 242 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "Hơn 300 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "250 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "200 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "300 triệu đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt kiều Czech khoác áo số 10 ở U22 Việt Nam",
     "content": "Tiền vệ Andrej Nguyễn An Khánh, một Việt kiều tại Cộng hòa Czech, đã trở về Việt Nam và tham gia buổi tập đầu tiên cùng đội tuyển U22 Việt Nam vào ngày 11/3. Anh được biết đến với khả năng ghi bàn và đã có thành tích tốt tại CLB FK SK Polanka trước khi hội quân. An Khánh được trao áo số 10, một vị trí quan trọng trong đội hình, và được kỳ vọng sẽ thể hiện tốt hơn so với hai năm trước. Đội U22 Việt Nam sẽ tham gia giải giao hữu CFA Team China 2025 trong tháng này.",
     "link": "https://vnexpress.net/viet-kieu-czech-khoac-ao-so-10-o-u22-viet-nam-4860055.html",
@@ -1225,6 +1256,33 @@
     ]
   },
   {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -1274,33 +1332,6 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -1453,33 +1484,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -1502,6 +1506,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -3637,37 +3668,6 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -3694,6 +3694,37 @@
       },
       {
         "text": "50 tầng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -3989,6 +4020,33 @@
     ]
   },
   {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -4016,28 +4074,28 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
     "answers": [
       {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "text": "2.500",
         "correct": true
       },
       {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "text": "10.000",
         "correct": false
       },
       {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "text": "8.500",
         "correct": false
       },
       {
-        "text": "Courtois không muốn chu cấp cho họ.",
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -4069,33 +4127,6 @@
       },
       {
         "text": "3.500",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
         "correct": false
       }
     ]
@@ -4351,64 +4382,6 @@
       },
       {
         "text": "Vì Messi muốn tập trung vào sự nghiệp cá nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
-    "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
-    "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Người hen phế quản nên tránh những loại thực phẩm nào?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu calo, có gas và chứa chất bảo quản",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm ngọt và nhiều vitamin",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chay và rau củ",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm nhiều protein và ít chất béo",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
