Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Cố vấn đặc biệt Liên minh nghị sĩ Việt- Nhật: Ở Nhật có nhiều thiên tài không bằng cấp",
+    "content": "Ông Takebe Tsutomu, cố vấn đặc biệt Liên minh nghị sĩ hữu nghị Việt - Nhật, nhấn mạnh rằng Nhật Bản có nhiều thiên tài không bằng cấp, điều này phản ánh tinh thần học hỏi từ thực tiễn. Ông cho rằng việc tăng cường giao lưu nhân dân giữa Việt Nam và Nhật Bản là thiết yếu để phát triển hợp tác và khuyến khích thanh niên Việt Nam tham gia vào quá trình sản xuất thực tiễn thay vì chỉ theo đuổi bằng cấp. Ông cũng bày tỏ hy vọng rằng thế hệ trẻ Việt Nam sẽ tiếp thu giá trị văn hóa và cách làm việc của Nhật Bản để góp phần vào sự phát triển bền vững của đất nước.",
+    "link": "https://tuoitre.vn/co-van-dac-biet-lien-minh-nghi-si-viet-nhat-o-nhat-co-nhieu-thien-tai-khong-bang-cap-20250311181453311.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thanh niên Việt Nam có thể học hỏi gì từ Nhật Bản để phát triển?",
+    "answers": [
+      {
+        "text": "Nền tảng từ thực tiễn và tinh thần làm việc nhóm.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần có bằng cấp cao.",
+        "correct": false
+      },
+      {
+        "text": "Không cần học hỏi gì.",
+        "correct": false
+      },
+      {
+        "text": "Theo đuổi thương mại đơn thuần.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiết lộ thu nhập nữ chủ tịch ngoại quốc ở casino lớn nhất Quảng Ninh",
     "content": "Công ty cổ phần Quốc tế Hoàng Gia (RIC), chủ sở hữu casino Royal Hạ Long, đã công bố báo cáo tài chính năm 2023, tiết lộ rằng bà Chen Yu Chen, chủ tịch HĐQT, nhận thu nhập gần 242 triệu đồng trong 7 tháng làm việc. Mặc dù doanh thu đạt hơn 111,5 tỉ đồng, nhưng công ty ghi nhận lỗ sau thuế lên tới 101,7 tỉ đồng, chủ yếu do chi phí tăng. Tình hình tài chính của RIC đang gặp khó khăn khi tổng lỗ lũy kế đã vượt 576 tỉ đồng.",
     "link": "https://tuoitre.vn/tiet-lo-thu-nhap-nu-chu-tich-ngoai-quoc-o-casino-lon-nhat-quang-ninh-20250311194116748.htm",
@@ -1874,33 +1901,6 @@
     ]
   },
   {
-    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
-    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
-    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
-    "answers": [
-      {
-        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
-        "correct": true
-      },
-      {
-        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
-        "correct": false
-      },
-      {
-        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh không phải thi nếu không muốn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
     "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
@@ -1923,6 +1923,33 @@
       },
       {
         "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
+    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
+        "correct": false
+      },
+      {
+        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh không phải thi nếu không muốn.",
         "correct": false
       }
     ]
