Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Doanh nghiệp Việt ký hợp đồng 67 triệu USD với thương xã hàng đầu Indonesia",
+    "content": "Ngày 11-3, Tập đoàn FPT đã ký hợp đồng trị giá 67 triệu USD với KMP Aryadhana, thương xã hàng đầu Indonesia, nhằm triển khai các thực hành ESG trong các lĩnh vực quản lý rác thải, giáo dục số và nông nghiệp số. Thỏa thuận kéo dài 5 năm này đánh dấu sự hợp tác chiến lược quan trọng giữa Việt Nam và Indonesia. FPT dự kiến sẽ áp dụng công nghệ tiên tiến như AI và blockchain để thúc đẩy sự chuyển đổi số tại Indonesia trong các lĩnh vực trọng yếu.",
+    "link": "https://tuoitre.vn/doanh-nghiep-viet-ky-hop-dong-67-trieu-usd-voi-thuong-xa-hang-dau-indonesia-20250311115711962.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Doanh nghiệp nào của Việt Nam đã ký hợp đồng 67 triệu USD với thương xã Indonesia?",
+    "answers": [
+      {
+        "text": "Tập đoàn FPT",
+        "correct": true
+      },
+      {
+        "text": "Công ty Vinamilk",
+        "correct": false
+      },
+      {
+        "text": "Tập đoàn Masan",
+        "correct": false
+      },
+      {
+        "text": "Công ty Viettel",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cố vấn đặc biệt Liên minh nghị sĩ Việt- Nhật: Ở Nhật có nhiều thiên tài không bằng cấp",
     "content": "Ông Takebe Tsutomu, cố vấn đặc biệt Liên minh nghị sĩ hữu nghị Việt - Nhật, nhấn mạnh rằng Nhật Bản có nhiều thiên tài không bằng cấp, điều này phản ánh tinh thần học hỏi từ thực tiễn. Ông cho rằng việc tăng cường giao lưu nhân dân giữa Việt Nam và Nhật Bản là thiết yếu để phát triển hợp tác và khuyến khích thanh niên Việt Nam tham gia vào quá trình sản xuất thực tiễn thay vì chỉ theo đuổi bằng cấp. Ông cũng bày tỏ hy vọng rằng thế hệ trẻ Việt Nam sẽ tiếp thu giá trị văn hóa và cách làm việc của Nhật Bản để góp phần vào sự phát triển bền vững của đất nước.",
     "link": "https://tuoitre.vn/co-van-dac-biet-lien-minh-nghi-si-viet-nhat-o-nhat-co-nhieu-thien-tai-khong-bang-cap-20250311181453311.htm",
